dnl Process this file with autoconf to produce a configure script.
AC_INIT(CType.cxx)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_YACC
AC_CHECK_PROG(NROFF,nroff,nroff -man,cat,$PATH)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(Makefile)
